bin/tests/snapshots/useless_has_attr__fix_9361572e1b83dd76c88aa8af9b983c7f255936c0326d983f21be6622852e970d.snap
---
source: bin/tests/useless_has_attr.rs
expression: snapshot
---
expression:
if x ? a then x.a else if b then c else d
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x ? a then x.a else if b then c else d
+x.a or (if b then c else d)
