bin/tests/snapshots/useless_has_attr__fix_d9560c7f69b706d403799f7a66c76245180b154a94fdc0b4d11154047fa9faec.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else b.c

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x ? a then x.a else b.c
+x.a or b.c
