bin/tests/snapshots/useless_has_attr__fix_e7dde1e57df271deadd50da80e0a3badc6b750dc96b8607f455e544512ab64bf.snap
---
source: bin/tests/useless_has_attr.rs
---
if x.a ? b then x.a.b else default

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x.a ? b then x.a.b else default
+x.a.b or default
