bin/tests/snapshots/useless_has_attr__lint_00a0e664b50f02d0652b368944bcfcec9375659d5a499735c55ded81eb48871c.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else if b then c else d

---
[W19] Warning: This `if` expression can be simplified with `or`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if x ? a then x.a else if b then c else d
   · ────────────────────┬────────────────────  
   ·                     ╰────────────────────── Consider using x.a or (if b then c else d) instead of this if expression
───╯
