bin/tests/snapshots/useless_has_attr__lint_3c62cf80cceead28f219a180d924a9293dbb692ce56d6c91e10e49790390913a.snap
---
source: bin/tests/useless_has_attr.rs
expression: snapshot
---
expression:
if x ? a.b then x.a.b else default
---
[W19] Warning: This `if` expression can be simplified with `or`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if x ? a.b then x.a.b else default
   · ─────────────────┬────────────────  
   ·                  ╰────────────────── Consider using x.a.b or default instead of this if expression
───╯
