bin/tests/snapshots/useless_has_attr__lint_d1e3e6b32c3c1a6dba3950ea6f6e7a1ae0cf15e80e87175f8403ef231ba8a004.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a.b then x.a.b else default

---
[W19] Warning: This `if` expression can be simplified with `or`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if x ? a.b then x.a.b else default
   · ─────────────────┬────────────────  
   ·                  ╰────────────────── Consider using x.a.b or default instead of this if expression
───╯
